<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/font_size">
        <menu>
            <!-- 定义一组单选菜单项 -->
            <group android:checkableBehavior="single">
                <!-- 定义多个菜单项 -->
                <item
                    android:id="@+id/font_小"
                    android:title="@string/font_小"/>
                <item
                    android:id="@+id/font_中"
                    android:title="@string/font_中"/>
                <item
                    android:id="@+id/font_大"
                    android:title="@string/font_大"/>

            </group>
        </menu>
    </item>
    <!-- 定义一个普通菜单项 -->
    <item android:id="@+id/plain_item"
        android:title="@string/plain_item">
    </item>
    <item android:title="@string/font_color">
        <menu>
            <!-- 定义一组普通菜单项 -->
            <group>
                <!-- 定义三个菜单项 -->
                <item
                    android:id="@+id/red_font"
                    android:title="@string/red_title"/>
                <item
                    android:id="@+id/black_font"
                    android:title="@string/black_title"/>
            </group>
        </menu>
    </item>
</menu>